# roku_remote

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
scripts/: find_channels_by_brute_force.sh  remove_unwanted_channels.sh
src/roku_remote/: app.py  discover.py  main.py  roku.py  skeleton.py
tests/: conftest.py  test_discover.py  test_skeleton.py
